<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#EEE"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFA"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:text="@string/label_device_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:layout_weight="1"
                android:textSize="18sp" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:text="@string/label_device_rssi"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/device_rssi"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FDD"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/chk_ascii_mode"
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ascii_mode" />

            <CheckBox
                android:id="@+id/chk_show_service_list"
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/show_service_list" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dip"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#BFB"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_send_data"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="2dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edt_send"
                android:layout_width="0dip"
                android:layout_height="33dip"
                android:layout_weight="2"
                android:background="#FFF"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@+id/btn_send"
                android:text="@string/default_send_text" >
            </EditText>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="90dip"
                android:layout_height="40dip"
                android:text="@string/send" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#DDF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_receive"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_clear_received"
                android:layout_width="90dip"
                android:layout_height="40dip"
                android:text="@string/btn_clear_received" />
        </LinearLayout>

        <TextView
            android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="2dip"
            android:background="#FFF"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/no_data"
            android:textSize="18sp" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/gatt_services_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>